--- a/praktika/praktika.csproj
+++ b/praktika/praktika.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>praktika.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,11 +59,11 @@
   <ItemGroup>
     <Compile Include="BackEnd\GetData.cs" />
     <Compile Include="DataBase.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FLogin.Designer.cs">
+      <DependentUpon>FLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="Items.cs">
       <SubType>UserControl</SubType>
@@ -81,6 +84,12 @@
     <Compile Include="MainLangas.Designer.cs">
       <DependentUpon>MainLangas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Managment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Managment.Designer.cs">
+      <DependentUpon>Managment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shop.cs">
@@ -89,8 +98,9 @@
     <Compile Include="Shop.Designer.cs">
       <DependentUpon>Shop.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SQL.cs" />
+    <EmbeddedResource Include="FLogin.resx">
+      <DependentUpon>FLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Items.resx">
       <DependentUpon>Items.cs</DependentUpon>
@@ -100,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainLangas.resx">
       <DependentUpon>MainLangas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Managment.resx">
+      <DependentUpon>Managment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
