--- a/praktika/praktika.csproj
+++ b/praktika/praktika.csproj
@@ -57,27 +57,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackEnd\GetData.cs" />
-    <Compile Include="DataBase.cs" />
+    <Compile Include="Basket.cs" />
     <Compile Include="FLogin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FLogin.Designer.cs">
       <DependentUpon>FLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Items.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Items.Designer.cs">
-      <DependentUpon>Items.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Krepselis.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Krepselis.Designer.cs">
-      <DependentUpon>Krepselis.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Login.cs" />
     <Compile Include="MainLangas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +76,7 @@
     <Compile Include="Managment.Designer.cs">
       <DependentUpon>Managment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shop.cs">
@@ -101,12 +88,6 @@
     <Compile Include="SQL.cs" />
     <EmbeddedResource Include="FLogin.resx">
       <DependentUpon>FLogin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Items.resx">
-      <DependentUpon>Items.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Krepselis.resx">
-      <DependentUpon>Krepselis.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainLangas.resx">
       <DependentUpon>MainLangas.cs</DependentUpon>
